force-app/main/default/objects/Purchase_Order__c/Purchase_Order__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >Purchase_Order_Compact_Layout</compactLayoutAssignment>
    <description
  >System for requesting approval for purchases and tracking what GL they go to.</description>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Purchase Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>