force-app/main/default/objects/Purchase_Order__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description
  >Total amount of the purchase being requested on this Purchase Order.</description>
    <inlineHelpText
  >Total amount of the purchase being requested on this Purchase Order.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>