force-app/main/default/objects/Purchase_Order__c/fields/Approval_Message__c.field-meta.xml
<CustomField>
    <fullName>Approval_Message__c</fullName>
    <formula>&quot;Click Save to approve this Purchase Order.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Message</label>
    <type>Text</type>
</CustomField>