force-app/main/default/objects/Purchase_Order__c/fields/Approve__c.field-meta.xml
<CustomField>
    <fullName>Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Hidden check box that runs the approval process workflow for the current user.</description>
    <label>Approve</label>
    <type>Checkbox</type>
</CustomField>