force-app/main/default/objects/Purchase_Order__c/fields/CC_on_Approval__c.field-meta.xml
<CustomField>
    <fullName>CC_on_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >To add an internal CC contact upon purchase order approval.</description>
    <inlineHelpText
  >(optional) Adds internal CC contact upon approval.</inlineHelpText>
    <label>CC on Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>