force-app/main/default/objects/Purchase_Order__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description
  >Enter any additional comments needed for the approval of this purchase order or for Finance.</description>
    <inlineHelpText
  >Enter any additional comments needed for the approval of this purchase order or for Finance.</inlineHelpText>
    <label>Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>