force-app/main/default/objects/Purchase_Order__c/fields/Event_Logistics_Financials__c.field-meta.xml
<CustomField>
    <fullName>Event_Logistics_Financials__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText
  >Link an Event&apos;s Logistics Financials record to this Purchase Order.</inlineHelpText>
    <label>Event Logistics Financials</label>
    <referenceTo>Logistics_Financials__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>