force-app/main/default/objects/Purchase_Order__c/fields/Item_or_Service_Requested__c.field-meta.xml
<CustomField>
    <fullName>Item_or_Service_Requested__c</fullName>
    <inlineHelpText
  >Short description of item or service requested. Use Comments if more space is needed.</inlineHelpText>
    <label>Item or Service Requested</label>
    <type>TextArea</type>
</CustomField>