force-app/main/default/objects/Purchase_Order__c/fields/Originator__c.field-meta.xml
<CustomField>
    <fullName>Originator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who is submitting the PO.</description>
    <inlineHelpText>The person who is submitting the PO.</inlineHelpText>
    <label>Originator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>