force-app/main/default/objects/Purchase_Order__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <inlineHelpText>[Ramp Card: Charge will be on a Ramp card] 
[Billed: An invoice will be provided to AP] 
[Ramp Reimbursement : Item will be paid for by employee and then reimbursed through Ramp]</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ramp Card</fullName>
                <default>true</default>
                <label>Ramp Card</label>
            </value>
            <value>
                <fullName>Billed</fullName>
            </value>
            <value>
                <fullName>Ramp Reimbursement</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
                <isActive>false</isActive>
                <label>Check</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>