force-app/main/default/objects/Purchase_Order__c/fields/PO_Category__c.field-meta.xml
<CustomField>
    <fullName>PO_Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >Choose the General Ledger Account this purchase order should be associated with.</description>
    <inlineHelpText
  >Choose the General Ledger Account this purchase order should be associated with.  If the account you&apos;re looking for is not listed, please contact Andrea Bandle in Accounts Payable.</inlineHelpText>
    <label>PO Category</label>
    <referenceTo>PO_Category__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>