force-app/main/default/objects/Purchase_Order__c/fields/Reject__c.field-meta.xml
<CustomField>
    <fullName>Reject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden field used to start rejection process.</description>
    <label>Reject</label>
    <type>Checkbox</type>
</CustomField>