force-app/main/default/objects/Purchase_Order__c/fields/Rejection_Message__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Message__c</fullName>
    <formula>&quot;Click Save to reject this Purchase Order.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejection Message</label>
    <type>Text</type>
</CustomField>