force-app/main/default/objects/Purchase_Order__c/fields/Submit_to__c.field-meta.xml
<CustomField>
    <fullName>Submit_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >This is the user that this purchase order will be submitted to for approval.</description>
    <inlineHelpText
  >This is the user that this purchase order will be submitted to for approval.</inlineHelpText>
    <label>Submit to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>