force-app/main/default/objects/Purchase_Order__c/fields/Submit_to_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Submit_to_is_Current_User__c</fullName>
    <description
  >Displays &quot;1&quot; if the Submit to is equal to the Current User, otherwise &quot;0&quot;.</description>
    <formula>IF($User.Id  =  Submit_to__r.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Displays &quot;1&quot; if the Submit to is equal to the Current User, otherwise &quot;0&quot;.</inlineHelpText>
    <label>Submit to is Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>