force-app/main/default/objects/Purchase_Order__c/fields/Tracker_Data__c.field-meta.xml
<CustomField>
    <fullName>Tracker_Data__c</fullName>
    <formula>Name &amp; BR()&amp;
Item_or_Service_Requested__c &amp; BR()&amp;
&quot;$&quot; &amp; TEXT (Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracker Data</label>
    <type>Text</type>
</CustomField>