force-app/main/default/objects/Purchase_Order__c/recordTypes/Purchase_Order_Locked.recordType-meta.xml
<RecordType>
    <fullName>Purchase_Order_Locked</fullName>
    <active>true</active>
    <label>Purchase Order - Locked</label>
</RecordType>