force-app/main/default/objects/Purchase_Order__c/validationRules/PO_Category_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Category_Required</fullName>
    <active>true</active>
    <description>Requires PO Category on save.</description>
    <errorConditionFormula>PO_Category__c = &quot;&quot;</errorConditionFormula>
    <errorMessage>You must enter a PO Category.</errorMessage>
</ValidationRule>