force-app/main/default/objects/Purchase_Order__c/listViews/My_Approved_Purchase_Orders.listView-meta.xml
<ListView>
    <fullName>My_Approved_Purchase_Orders</fullName>
    <columns>NAME</columns>
    <columns>Item_or_Service_Requested__c</columns>
    <columns>Amount__c</columns>
    <columns>Submit_to__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Originator_is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>My Approved Purchase Orders</label>
</ListView>