force-app/main/default/objects/Purchase_Order__c/listViews/My_Purchase_Orders.listView-meta.xml
<ListView>
    <fullName>My_Purchase_Orders</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Item_or_Service_Requested__c</columns>
    <columns>Amount__c</columns>
    <columns>Submit_to__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending,Pending Final Approval</value>
    </filters>
    <filters>
        <field>Originator_is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Submit_to_is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Pending Purchase Orders</label>
</ListView>